kubernetes/samples/wordpress-full/mariadb-galera.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: prof
spec:
  type: ClusterIP
  selector:
    app: mariadb-galera
  ports:
  - name: mariadb
    port: 3306
    targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb-galera
  namespace: prof
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: mariadb-galera
  ports:
  - name: mariadb-galera
    port: 4567
    targetPort: 4567
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb-galera
  namespace: prof
spec:
  serviceName: mariadb-galera
  selector:
    matchLabels:
      app: mariadb-galera
  replicas: 2
  template:
    metadata:
      labels:
        app: mariadb-galera
    spec:
      securityContext:
        fsGroup: 1001
      containers:
        - name: mariadb-galera
          image: bitnami/mariadb-galera:latest
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 3306
          command:
            - /scripts/script.sh
          securityContext:
            runAsUser: 1001
          volumeMounts:
            - name: config
              mountPath: /scripts
            - name: mariadb-galera-data
              mountPath: /bitnami/mariadb
      volumes:
        - name: config
          configMap:
            name: mariadb-galera-config
            defaultMode: 0755
            items:
              - key: script.sh
                path: script.sh
  volumeClaimTemplates:
    - metadata:
        name: mariadb-galera-data
        namespace: prof
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: longhorn
        resources:
          requests:
            storage: 256Mi
