kubernetes/samples/wordpress-full/wordpress.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: prof
spec:
  type: ClusterIP
  ports:
    - name: wordpress-http
      port: 8080
      targetPort: 8080
    - name: wordpress-https
      port: 8443
      targetPort: 8443
  selector:
    app: wordpress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: prof
spec:
  selector:
    matchLabels:
      app: wordpress
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      securityContext:
        fsGroup: 1001
      containers:
      - image: bitnami/wordpress:latest
        name: wordpress
        ports:
        - containerPort: 8080
          name: wordpress-http
        - containerPort: 8443
          name: wordpress-https
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /bitnami/wordpress
      dnsConfig:                            # ndots is used to control the DNS access
        options:
          - name: ndots
            value: "1"  
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wp-pv-claim
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  namespace: prof
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  rules:
  - host: wordpress-prof.k3s
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress
            port: 
              number: 8080
